<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_button">First Crime</string>
    <string name="last_button">Last Crime</string>
    <string name="date_picker_title">Pick Date</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="subtitle_plural"><item quantity="one">%1$d crime</item><item quantity="other">%1$d crimes</item></plurals>
</resources>
